fix navbar styling and color, bleed

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -22,7 +22,8 @@ $nflred: #d20000;
 .navbar {
   padding-bottom: 10px;
   margin-bottom: 0;
-  background: #f0f0f0;
+  background: $nflblue;
+  border-radius: 0;
 
   a {
     color: white;
